--- a/src/Pages/Home/Brands/Tab.css
+++ b/src/Pages/Home/Brands/Tab.css
@@ -10,6 +10,6 @@
 .react-tabs__tab--selected {
     font-weight: 600;
     padding: 0 3px 5px 3px;
-
+    outline: none;
     border-bottom: 3px solid #f17e23;
 }
